# GameEngine

./: .gitignore.txt  AppConfig.ini  CMakeLists.txt  ClassDiagram.drawio  Configuration.ini  README.md  SM_ProgConfig.ini  Scene-2.ini  Scene.ini  Scene.txt  Shader_Manager.ini  app.txt  tmp.ini
Assets/Animations/: Anim_Mutant_Drunk_Walk.glb  Anim_Mutant_Drunk_Walk.gltf  Anim_Mutant_Dying_gltf.gltf  Anim_Mutant_Silly_Dancing.glb
Assets/Cottage/: Cottage.mtl
Assets/Crate/: Crate.mtl
Assets/Lowpoly_tree/: Lowpoly_tree.mtl
Assets/Shapes/Cube/: Cube.mtl
Assets/Shapes/Cylinder/: Cylinder.mtl
Assets/Skeletons/: Mutant.gltf  Taunt.glb
Assets/backpack/: backpack.mtl
Docs/: ClassDiagram.drawio
Resources/Assets/AK-74/: AK-74_LP.mtl
Resources/Assets/CinematicRock/: CinematicRock.mtl
Resources/Assets/Container/: Container.mtl
Resources/Assets/Cottage/: Cottage.mtl
Resources/Assets/Rock/: Rock.mtl
Resources/Assets/Snag/: Snag.mtl
Resources/Assets/Tree/: Tree.mtl
Resources/Assets/broken_wall/: broken_wall.mtl
Resources/Assets/floor_pattern/: floor_pattern.mtl
Resources/Assets/ground/: ground.mtl
Resources/Assets/mossy_rock/: mossy_rock.mtl
Resources/Assets/stone_wall/: stone_wall.mtl
Resources/Assets/wall/: wall.mtl
Resources/Shaders/: DepthCubeMap.frag  DepthCubeMap.geom  DepthMap.frag  DepthMap.vert  Framebuffer.frag  Framebuffer.vert  Glyph.frag  Glyph.vert  GridPlane.frag  GridPlane.vert  Instancing.vert  NormalMap.frag  NormalMap.vert  Scene.frag  Scene.vert  SceneShadows.frag  SceneShadows.vert  ShadowMap.frag  ShadowMap.vert  ShadowMapDepth.vert  Skybox.frag  Skybox.vert  Terrain.frag  Terrain.vert  Testing.frag  Testing.geom  Testing.vert  VisualShadowDepth.frag
Shaders/: Default.frag  Default.vert  DepthCubeMap.vert  Framebuffer.frag  Framebuffer.vert  GridPlane.frag  GridPlane.vert  Instancing.vert  Scene.frag  Scene.vert  SceneShadows.frag  SceneShadows.vert  ShadowMap.frag  ShadowMapDepth.vert  SkeletalAnim.vert  SkeletalAnimShadows.vert  Terrain.tesc  Terrain.tese  Terrain.vert  TestShader.frag  TestShader.vert  Testing.frag  Testing.vert
Source/: Actor.cpp  Actor.hh  Camera.cpp  Camera.hh  Core.hh  Core.hpp  Engine.cpp  Engine.hh  FileDialog.cpp  FileDialog.hh  FileDialog.hpp  FrameBuffer.cpp  FrameBuffer.hh  GameEngine.cpp  INIFileManager.cpp  INIFileManager.hpp  Logger.cpp  Logger.hh  Logger.hpp  Main.cpp  Model.cpp  Model.hh  NonCopyable.hh  ObjectLoader.cpp  ObjectLoader.hh  Renderer.cpp  Renderer.hh  RootComponent.hh  Scene.cpp  Scene.hh  SceneObject.cpp  SceneObject.hh  Shader.cpp  Shader.hh  Texture2D.cpp  Texture2D.hh  Transform.hh  UncopyableObject.hh  VertexArray.cpp  VertexArray.hh  (+2 more)
Source/Core/: Core.cpp  Core.hpp  GL.hpp
Source/Core/DesignPattern/: Singleton.hpp
Source/Core/Dialog/: FileDialog.cpp  FileDialog.hpp
Source/Core/FileParser/: INIFileParser.cpp  INIFileParser.hpp
Source/Core/Log/: Logger.cpp  Logger.hpp
Source/Core/Math/: Core.hpp  Ext.hpp  Extensions.cpp  Extensions.hpp  Math.cpp  Math.hpp
Source/Editor/: ContentBrowserPanel.cpp  ContentBrowserPanel.hh  ContentBrowserPanel.hpp  DebugFrame.cpp  DebugFrame.hh  DebugFrame.hpp  DebugPanel.cpp  DebugPanel.hpp  DetailsPanel.cpp  DetailsPanel.hh  DetailsPanel.hpp  Editor.cpp  Editor.hh  Editor.hpp  HierarchyPanel.cpp  HierarchyPanel.hh  InspectorPanel.cpp  InspectorPanel.hh  InspectorPanel.hpp  MenuBar.cpp  MenuBar.hh  MenuBar.hpp  OutlinerPanel.cpp  OutlinerPanel.hh  OutlinerPanel.hpp  Panel.hpp  PropertyPanel.cpp  PropertyPanel.hh  ScenePanel.cpp  ScenePanel.hh  SettingsFrame.cpp  SettingsFrame.hh  SettingsFrame.hpp  SettingsPanel.cpp  SettingsPanel.hpp  ViewportPanel.cpp  ViewportPanel.hh  ViewportPanel.hpp
Source/Editor/Imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_widgets.cpp
Source/Engine/: Camera.cpp  Camera.hpp  Components.cpp  Components.hpp  Engine.cpp  Engine.hpp  FileDialog.cpp  FileDialog.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GameObject.hpp  GameObjectType.hpp  Globals.cpp  Globals.hpp  IniFileHandler.hpp  InstancingMesh.cpp  InstancingMesh.hpp  Logger.cpp  Main.cpp  Material.hpp  ObjectLoader.cpp  ObjectLoader.hpp  PrimaryCamera.cpp  PrimaryCamera.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  SceneSerializer.cpp  SceneSerializer.hpp  Shader.cpp  Shader.hpp  ShaderUniforms.hpp  ShadowMap.cpp  ShadowMap.hpp  StaticMesh.cpp  StaticMesh.hpp  Texture2D.cpp  (+8 more)
Source/Engine/ECS/: Bone.cpp  (+29 more)
Source/GUI/: CameraProperties.cpp  ContentBrowser.cpp  GizmoToolBar.cpp  Gui.cpp  Gui.hpp  Hierarchy.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Inspector.cpp  MenuBar.cpp  ObjectDetails.cpp  Outliner.cpp  Preferences.cpp  Viewport.cpp  WorldProperties.cpp
Source/Graphics/: FrameBuffer.cpp  FrameBuffer.hh  Renderer.cpp  Renderer.hh  Shader.cpp  Shader.hh  VertexArray.cpp  VertexArray.hh
Source/Imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
Source/Lighting/: BaseLight.hh  DirectionalLight.cpp  DirectionalLight.hh  PointLight.cpp  PointLight.hh  SpotLight.cpp  SpotLight.hh
Source/Mesh/: Cube.cpp  Cube.hh  CubeMesh.cpp  CubeMesh.hh  InstancedCubeMesh.cpp  InstancedCubeMesh.hh  InstancedMesh.cpp  InstancedMesh.hh  InstancingMesh.cpp  InstancingMesh.hh  InstancingStaticMesh.cpp  InstancingStaticMesh.hh  Mesh.cpp  Mesh.hh  Model.cpp  Model.hh  StaticMesh.cpp  StaticMesh.hh
Source/Pool/: ShaderPool.cpp  ShaderPool.hh  TexturePool.cpp  TexturePool.hh
Source/ResourceManager/: FontsManager.cpp  FontsManager.hh  ShadersManager.cpp  ShadersManager.hh  TexturesManager.cpp  TexturesManager.hh
Source/Subsystems/: ConfigurationsManager.cpp  ConfigurationsManager.hh  FontsManager.cpp  FontsManager.hh  ObjectLoader.cpp  ObjectLoader.hh  ResourceManager.hh  ShadersManager.cpp  ShadersManager.hh  TexturesManager.cpp  TexturesManager.hh
(+158 files in other folders)
